# nfcd

./: Makefile.am  Makefile.in  README.md  analyzer_data_v5.c  config.h.in  configure  configure.ac  configure.scan  exporter.c  grant.sql  handl.c  logger.c  nfc.h  nfc.sql  parse.c  sig.c  tosql.c  udp_serv_col.c
sql/: crontab  devices.sql  grant.sql  nfc.sql  nfcxx.sql
